--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = No\n",
+    "kindof_neighbors = countries\n",
     "kindof_neighbors"
    ]
   },
