--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Thaila\") # add code here"
+    "countries.append(\"Thailand\") # add code here"
    ]
   },
   {
@@ -279,9 +279,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Thailand',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries \n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
