--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = len(countries) = len(unique_countries)\n",
+    "num_of_repeats = countries.len() = un\n",
     "num_of_repeats # 3"
    ]
   },
