--- a/index.ipynb
+++ b/index.ipynb
@@ -466,20 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-17-7e8969126fd7>, line 1)",
+     "evalue": "can't assign to function call (<ipython-input-18-bc20e54ecf28>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-7e8969126fd7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    num_of_repeats = len(countries) = len(unique_countries)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-bc20e54ecf28>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    num_of_repeats = countries.len() = unique_countries.len()\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
    "source": [
-    "num_of_repeats = countries.len() = un\n",
+    "num_of_repeats = countries.len() = unique_countries.len()\n",
     "num_of_repeats # 3"
    ]
   },
