--- a/index.ipynb
+++ b/index.ipynb
@@ -466,20 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-18-bc20e54ecf28>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-bc20e54ecf28>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    num_of_repeats = countries.len() = unique_countries.len()\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
-     ]
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries.\n",
+    "num_of_repeats = len(unique_countries)\n",
+    "\n",
     "num_of_repeats # 3"
    ]
   },
